--- a/Modacity/Modacity/ViewController/AskFeedbacks/feedback.storyboard
+++ b/Modacity/Modacity/ViewController/AskFeedbacks/feedback.storyboard
@@ -83,7 +83,7 @@ how to improve? Connect with one of our experts.</string>
                                                 <rect key="frame" x="236" y="1" width="99" height="43"/>
                                                 <state key="normal" image="btn_send"/>
                                                 <connections>
-                                                    <action selector="onSent:" destination="HGc-JV-kn0" eventType="touchUpInside" id="Mac-V4-ijQ"/>
+                                                    <action selector="onSent:" destination="HGc-JV-kn0" eventType="touchUpInside" id="uzw-tZ-djj"/>
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TqK-u1-l3d">
