--- a/Modacity/Modacity/ViewController/Playlist/playlist.storyboard
+++ b/Modacity/Modacity/ViewController/Playlist/playlist.storyboard
@@ -937,13 +937,13 @@
                                                         <rect key="frame" x="0.0" y="0.0" width="120" height="96"/>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gUE-Yb-3BW">
-                                                        <rect key="frame" x="52.666666666666657" y="17" width="16" height="34"/>
+                                                        <rect key="frame" x="52.666666666666657" y="20" width="16" height="34"/>
                                                         <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="28"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Days in a Row" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rMp-iA-YXy">
-                                                        <rect key="frame" x="29.333333333333343" y="58" width="62" height="12"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DAYS IN A ROW" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rMp-iA-YXy">
+                                                        <rect key="frame" x="23.666666666666657" y="61" width="73.666666666666671" height="12"/>
                                                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="10"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <nil key="highlightedColor"/>
@@ -954,8 +954,8 @@
                                                     <constraint firstItem="mzs-dA-V9W" firstAttribute="leading" secondItem="D7p-Kh-Qxh" secondAttribute="leading" id="857-0a-UC0"/>
                                                     <constraint firstAttribute="trailing" secondItem="mzs-dA-V9W" secondAttribute="trailing" id="8s2-dR-nf9"/>
                                                     <constraint firstItem="mzs-dA-V9W" firstAttribute="top" secondItem="D7p-Kh-Qxh" secondAttribute="top" id="FOv-w9-XwX"/>
-                                                    <constraint firstAttribute="bottom" secondItem="rMp-iA-YXy" secondAttribute="bottom" constant="26" id="U7j-Tu-tG9"/>
-                                                    <constraint firstItem="gUE-Yb-3BW" firstAttribute="top" secondItem="D7p-Kh-Qxh" secondAttribute="top" constant="17" id="ZA4-cn-yG7"/>
+                                                    <constraint firstAttribute="bottom" secondItem="rMp-iA-YXy" secondAttribute="bottom" constant="23" id="U7j-Tu-tG9"/>
+                                                    <constraint firstItem="gUE-Yb-3BW" firstAttribute="top" secondItem="D7p-Kh-Qxh" secondAttribute="top" constant="20" id="ZA4-cn-yG7"/>
                                                     <constraint firstAttribute="bottom" secondItem="mzs-dA-V9W" secondAttribute="bottom" id="agD-ia-wG9"/>
                                                     <constraint firstItem="rMp-iA-YXy" firstAttribute="centerX" secondItem="D7p-Kh-Qxh" secondAttribute="centerX" id="i4H-Y8-hpa"/>
                                                     <constraint firstItem="gUE-Yb-3BW" firstAttribute="centerX" secondItem="D7p-Kh-Qxh" secondAttribute="centerX" id="nFM-pZ-cvJ"/>
